--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "hello-vue3",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --open",
     "build": "vite build"
   },
   "dependencies": {
-    "vue": "^3.0.4"
+    "less": "^4.1.3",
+    "vue": "^3.0.4",
+    "vue-router": "^4.0.16"
   },
   "devDependencies": {
     "vite": "^1.0.0-rc.13",
