--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "build": "vite build"
   },
   "dependencies": {
-    "less": "^4.1.3",
-    "vue": "^3.0.4",
+    "vue": "^3.2.37",
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.13",
-    "@vue/compiler-sfc": "^3.0.4"
+    "@rollup/plugin-alias": "^3.1.9",
+    "@vitejs/plugin-vue": "^2.3.3",
+    "@vue/compiler-sfc": "^3.0.4",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
+    "vite": "^2.9.12"
   }
 }
