feat: guess number

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "json-templater": "^1.2.0",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
   },
