--- a/package.json
+++ b/package.json
@@ -2,20 +2,29 @@
   "name": "hello-vue3",
   "version": "0.0.0",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "dev": "vite --open --host",
     "build": "vite build"
   },
   "dependencies": {
+    "echarts": "^4.9.0",
     "json-templater": "^1.2.0",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.9",
-    "@vitejs/plugin-vue": "^2.3.3",
+    "@vitejs/plugin-vue": "3.1.0",
     "@vue/compiler-sfc": "^3.0.4",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
-    "vite": "^2.9.12"
+    "patch-package": "^6.4.7",
+    "vite": "3.1.0"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "vite@3.1.0": "patches/vite@3.1.0.patch",
+      "@vitejs/plugin-vue@3.1.0": "patches/@vitejs__plugin-vue@3.1.0.patch"
+    }
   }
 }
