--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "dev": "vite --open --host",
-    "build": "vite build"
+    "build": "vite build",
+    "prettier": "prettier --write src/"
   },
   "dependencies": {
     "echarts": "^4.9.0",
     "json-templater": "^1.2.0",
+    "long": "^5.2.0",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
   },
@@ -19,6 +21,7 @@
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "patch-package": "^6.4.7",
+    "prettier": "^2.8.0",
     "vite": "3.1.0"
   },
   "pnpm": {
