--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "echarts": "^4.9.0",
+    "jquery": "^3.6.3",
     "json-templater": "^1.2.0",
     "long": "^5.2.0",
     "vue": "^3.2.37",
