--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,5 +31,10 @@
   "editor.codeActionsOnSave": {
     "source.organizeImports": false,
     "source.fixAll": true
+  },
+  "less.compile": {
+    "compress": false, // true => remove surplus whitespace
+    "sourceMap": false, // true => generate source maps (.css.map files)
+    "out": false // false => DON'T output .css files (overridable per-file, see below)
   }
 }
