--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@rollup/plugin-alias": "^3.1.9",
     "@vitejs/plugin-vue": "3.1.0",
     "@vue/compiler-sfc": "^3.0.4",
+    "autoprefixer": "^10.4.13",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "patch-package": "^6.4.7",
+    "postcss-flexbugs-fixes": "^5.0.2",
     "prettier": "^2.8.0",
     "vite": "3.1.0"
   },
