--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "patch-package": "^6.4.7",
     "postcss-flexbugs-fixes": "^5.0.2",
     "prettier": "^2.8.0",
-    "vite": "3.1.0"
+    "unplugin-auto-import": "^0.15.2",
+    "vite": "3.1.0",
+    "vue-global-api": "^0.4.1"
   },
   "pnpm": {
     "patchedDependencies": {
