--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "importHelpers": true,
     "skipLibCheck": true,
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
-    "types": ["node"],
+    "types": ["node", "naive-ui/volar"],
     "paths": {
       "@/*": ["src/*"],
       "*": ["node_modules/*", "@types/*"]
