--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^10.4.13",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
+    "naive-ui": "^2.36.0",
     "patch-package": "^6.4.7",
     "postcss-flexbugs-fixes": "^5.0.2",
     "prettier": "^2.8.0",
